# ollama-vox

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.yaml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci_cd.yml
core/: audio.py  config.py  llm.py  stt.py  tts.py  workers.py
ollama_vox/: __init__.py  config.yaml  main.py
ollama_vox/core/: audio.py  config.py  llm.py  stt.py  tts.py  workers.py
ollama_vox/ui/: model_setup.py  setup_wizard.py  tray_app.py
tests/: conftest.py
tests/core/: test_audio.py  test_config.py  test_llm.py  test_stt.py  test_tts.py  test_workers.py
ui/: menubar.py  tray_app.py
