[project]
name = "ollama-vox"
version = "1.0.0"
description = "Local macOS menubar voice assistant powered by MLX Whisper, Ollama, and Kokoro TTS"
authors = [{name = "Mayur Dayal"}]
readme = "README.md"
requires-python = ">=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]
dependencies = [
    "huggingface-hub>=1.12.2",
    "misaki[en]>=0.9.4",
    "mlx-audio>=0.4.3",
    "mlx-whisper>=0.4.3",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "pyside6>=6.8.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "phonemizer>=3.3.0",
]

[project.scripts]
ollama-vox = "ollama_vox.main:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=81.0.0", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ollama_vox*"]

[tool.setuptools.package-data]
"ollama_vox" = ["config.yaml"]

[tool.black]
target-version = ['py312']

[dependency-groups]
dev = [
    "black>=26.3.1",
    "rich>=15.0.0",
    "ruff>=0.15.12",
]
